      for the report and Carl Chenet for the patch; Closes: #512506
  * bin/reportbug
    - check if all the files passed on the CLI are present, if not quitting;
      thanks to Jari Aalto for the report and Carl Chenet for the patch;
      Closes: #445443
  * reportbug/utils.py
    - correctly recognize the CPUs number on Alpha systems; thanks to Juhana
      Helovuo for the report and and Carl Chenet for the patch; Closes: #512675

  [ Luca Bruno ]
  * bin/reportbug
    - fix default when choosing for realname and email at configuration time
    - offer interface configuration on explicit configuration or when no
      interface is being specified (the used interface is set as default)
    - specify whether the get_string result can be empty or not
  * reportbug/debianbts.py
    - use ui proper functions instead of ewrite; thanks to Jan Hauke Rahm for
      the report; Closes: #521113
  * reportbug/utils.py
    - stronger check when opening files, so that it won't crash if files can't
      be read; thanks to Carl Chenet for the report and patch; Closes: #521496
  * reportbug/ui/gtk2_ui.py
    - added VTE to handle bugscripts and mutt
    - support for spell checking in the bug report editor
    - fix display_failure handling
    - make BTS query tree columns sortable
    - ui layout improvements
  * reportbug/ui/urwid_ui.py
    - fix default severity (to normal) in non-multiple menus; Closes: #496969
  * debian/control
    - added suggests for python-vte and python-gnome2-extras (for spell check)
  * debian/copyright, reportbug/ui/gtk2_ui.py
    - bump copyright years
  * man/{querybts.1, reportbug.1, reportbug.conf.5}, conf/reportbug.conf
    - update frontends list, removing newt; thanks to Raphaël Hertzog for the
      report; Closes: #522290
  * bin/querybts
    - do not try to import newt ui as default ui, since it's removed now; use
      text ui instead

 -- Sandro Tosi <morph@debian.org>  Fri, 10 Apr 2009 22:37:13 +0200
