@@ -21,7 +21,10 @@ reportbug (4.1) UNRELEASED; urgency=low
       Closes: #445443
   * reportbug/utils.py
     - correctly recognize the CPUs number on Alpha systems; thanks to Juhana
-      Helovuo for the report and and Carl Chenet for the patch; Closes: #512675
+      Helovuo for the report and Carl Chenet for the patch; Closes: #512675
+  * reportbug/submit.py
+    - better handling of file with UTF8 name, using subprocess.Popen; thanks to
+      Sam Morris for the report and Carl Chenet for the patch; Closes: #491869
 
   [ Luca Bruno ]
   * bin/reportbug
@@ -54,7 +57,7 @@ reportbug (4.1) UNRELEASED; urgency=low
     - do not try to import newt ui as default ui, since it's removed now; use
       text ui instead
 
- -- Sandro Tosi <morph@debian.org>  Fri, 10 Apr 2009 22:37:13 +0200
+ -- Sandro Tosi <morph@debian.org>  Fri, 10 Apr 2009 23:06:59 +0200
 
 reportbug (4.0) unstable; urgency=low
 
